libs/error-stack/tests/ui/into_report.stderr
error[E0599]: the method `into_report` exists for enum `Result<(), Report<RootError>>`, but its trait bounds were not satisfied
  --> tests/ui/into_report.rs:24:20
   |
24 |     let _ = result.into_report();
   |                    ^^^^^^^^^^^
   |
  ::: src/report.rs
   |
   | pub struct Report<C> {
   | -------------------- doesn't satisfy `_: From<Report<RootError>>`
   |
  ::: $RUST/core/src/result.rs
   |
   | pub enum Result<T, E> {
   | --------------------- doesn't satisfy `_: IntoReport`
   |
note: there's an earlier shadowed binding `result` of type `Result<(), RootError>` that has method `into_report` available
  --> tests/ui/into_report.rs:19:9
   |
19 |     let result = Err::<(), _>(RootError);
   |         ^^^^^^ `result` of type `Result<(), RootError>` that has method `into_report` defined earlier here
...
22 |     let result = Err::<(), _>(Report::new(RootError));
   |         ------ earlier `result` shadowed here with type `Result<(), error_stack::Report<RootError>>`
   = note: the following trait bounds were not satisfied:
           `error_stack::Report<error_stack::Report<RootError>>: From<error_stack::Report<RootError>>`
           which is required by `Result<(), error_stack::Report<RootError>>: IntoReport`
